Greater memory use reduction with C build. Simplify makefile.

--- a/src/makefile
+++ b/src/makefile
@@ -23,23 +23,23 @@
 ### =========================================================================
 
 #CC   = clang
-CC   = g++
+CC   = gcc
 SRC  = *.c pyrrhic/tbprobe.c
 LIBS = -lpthread -lm
 NN   = -DUSE_NNUE=0
 EXE  = Ethereal
 
-ifdef EVALFILE
-	NN       = -DUSE_NNUE=1
-	NNFLAGS += -DEVALFILE=\"$(EVALFILE)\"
-	SRC      = *.c nnue/*.c pyrrhic/tbprobe.c
-endif
+# ifdef EVALFILE
+# 	NN       = -DUSE_NNUE=1
+# 	NNFLAGS += -DEVALFILE=\"$(EVALFILE)\"
+# 	SRC      = *.c nnue/*.c pyrrhic/tbprobe.c
+# endif
 
-ifdef OWNER
-	NN       = -DUSE_NNUE=1
-	NNFLAGS += -DLICENSE_OWNER=\"$(OWNER)\"
-	SRC      = *.c nnue/*.c pyrrhic/tbprobe.c
-endif
+# ifdef OWNER
+# 	NN       = -DUSE_NNUE=1
+# 	NNFLAGS += -DLICENSE_OWNER=\"$(OWNER)\"
+# 	SRC      = *.c nnue/*.c pyrrhic/tbprobe.c
+# endif
 
 WFLAGS   = -std=gnu11 -Wall -Wextra -Wshadow
 RFLAGS   = -O3 $(WFLAGS) -DNDEBUG -flto $(NN) $(NNFLAGS) -static
@@ -47,8 +47,8 @@ CFLAGS   = -O3 $(WFLAGS) -DNDEBUG -flto $(NN) $(NNFLAGS) -march=native
 TFLAGS   = -O3 $(WFLAGS) -DNDEBUG -flto $(NN) $(NNFLAGS) -march=native -fopenmp -DTUNE
 PGOFLAGS = -fno-asynchronous-unwind-tables
 
-POPCNTFLAGS = -DUSE_POPCNT -mpopcnt
-PEXTFLAGS   = -DUSE_PEXT -mbmi2 $(POPCNTFLAGS)
+#POPCNTFLAGS = -DUSE_POPCNT -mpopcnt
+#PEXTFLAGS   = -DUSE_PEXT -mbmi2 $(POPCNTFLAGS)
 
 SSSE3FLAGS  = -DUSE_SSSE3 -msse -msse2 -msse3 -mssse3
 AVXFLAGS    = -DUSE_AVX -mavx -msse4.1 $(SSSE3FLAGS)
@@ -62,17 +62,17 @@ PROPS = $(shell echo | $(CC) -march=native -E -dM -)
 
 # Detect POPCNT and PEXT Instruction Support
 
-ifneq ($(findstring __POPCNT__, $(PROPS)),)
-	CFLAGS += -DUSE_POPCNT
-endif
+# ifneq ($(findstring __POPCNT__, $(PROPS)),)
+# 	CFLAGS += -DUSE_POPCNT
+# endif
 
-ifneq ($(findstring __BMI2__, $(PROPS)),)
-	ifeq ($(findstring __znver1, $(PROPS)),)
-		ifeq ($(findstring __znver2, $(PROPS)),)
-			CFLAGS += -DUSE_PEXT
-		endif
-	endif
-endif
+# ifneq ($(findstring __BMI2__, $(PROPS)),)
+# 	ifeq ($(findstring __znver1, $(PROPS)),)
+# 		ifeq ($(findstring __znver2, $(PROPS)),)
+# 			CFLAGS += -DUSE_PEXT
+# 		endif
+# 	endif
+# endif
 
 # Detect AVX2, AVX, or otherwise SSSE3 Instruction Support
 
@@ -92,28 +92,28 @@ CFLAGS += -fpermissive
 
 # Determine whether we are using GCC or Clang for potential PGO
 
-ifneq ($(findstring gcc, $(CC)),)
-	PGOGEN   = -fprofile-generate
-	PGOUSE   = -fprofile-use
-endif
+# ifneq ($(findstring gcc, $(CC)),)
+# 	PGOGEN   = -fprofile-generate
+# 	PGOUSE   = -fprofile-use
+# endif
 
-ifneq ($(findstring clang, $(CC)),)
-	PGOMERGE = llvm-profdata merge -output=ethereal.profdata *.profraw
-	PGOGEN   = -fprofile-instr-generate
-	PGOUSE   = -fprofile-instr-use=ethereal.profdata
-endif
+# ifneq ($(findstring clang, $(CC)),)
+# 	PGOMERGE = llvm-profdata merge -output=ethereal.profdata *.profraw
+# 	PGOGEN   = -fprofile-instr-generate
+# 	PGOUSE   = -fprofile-instr-use=ethereal.profdata
+# endif
 
 ### =========================================================================
 ### Section 3. Build Targets Optimized For Native Use
 ### =========================================================================
 
-pgo:
-	rm -f *.gcda pyrrhic/*.gcda nnue/*.gcda *.profdata *.profraw
-	$(CC) $(PGOGEN) $(CFLAGS) $(PGOFLAGS) $(SRC) $(LIBS) -o $(EXE)
-	./$(EXE) bench > /dev/null 2>&1
-	$(PGOMERGE)
-	$(CC) $(PGOUSE) $(CFLAGS) $(PGOFLAGS) $(SRC) $(LIBS) -o $(EXE)
-	rm -f *.gcda pyrrhic/*.gcda nnue/*.gcda *.profdata *.profraw
+# pgo:
+# 	rm -f *.gcda pyrrhic/*.gcda nnue/*.gcda *.profdata *.profraw
+# 	$(CC) $(PGOGEN) $(CFLAGS) $(PGOFLAGS) $(SRC) $(LIBS) -o $(EXE)
+# 	./$(EXE) bench > /dev/null 2>&1
+# 	$(PGOMERGE)
+# 	$(CC) $(PGOUSE) $(CFLAGS) $(PGOFLAGS) $(SRC) $(LIBS) -o $(EXE)
+# 	rm -f *.gcda pyrrhic/*.gcda nnue/*.gcda *.profdata *.profraw
 
 basic:
 	$(CC) $(CFLAGS) $(SRC) $(LIBS) -o $(EXE)
